--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,5 @@
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
 
-    <string name="api_base_url">https://payment.ivacbd.com/api</string>
+    <string name="api_base_url">https://payment.ivacbd.com/api/</string>
 </resources>
